Övning 17: Meny + skriv fil - fixat encoding

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
-1. Gå upp
-2. Äta frukost
-3. Borsta tänder
-4. Klä sig
-5. Gå till skolan.
+1. Vakna
+2. Gå upp ur sängen
+3. Ät frukost
+4. Klä på dig
+5. Fixa sig
+6. Gå till skolan
